<resources>
    <string name="app_name">Laagua</string>
    <string name="hint_weight">Insira seu peso (kg)</string>
    <string name="hint_age">Insira sua idade (anos)</string>
    <string name="hint_name">Insira seu primeiro nome</string>
    <string name="hint_height">Insira sua altura (centímeros)</string>
    <string name="text_register_alarm">Adicionar lembrete</string>
    <string name="text_insert_your_personal_data">Preencha os campos abaixo</string>
    <string name="text_list_alarms">Listar lembretes</string>
    <string name="text_save_all">Salvar alterações</string>
    <string name="text_calculate">Calcular</string>
    <string name="text_confirm">Confirmar informações</string>

    <string name="toast_message_error_name">Por favor, informe seu nome e tente novamente!</string>
    <string name="toast_message_error_weight">Por favor, informe seu peso e tente novamente!</string>
    <string name="toast_message_error_age">Por favor, informe sua idade e tente novamente!</string>
    <string name="toast_message_error_height">Por favor, informe sua altura e tente novamente!</string>
    <string name="toast_message_error_gender">Por favor, informe seu gênero biológico!</string>
    <string name="toast_message_clear">Campos limpos, preencha com a nova informação!</string>
    <string name="toast_message_saved">Informações salvas, usuário criado com sucesso!</string>
    <string name="toast_message_update">Informações atualizadas!</string>

    <string name="text_personal_data">Dados pessoais</string>
    <string name="text_get_started">Por onde começar?</string>
    <string name="text_get_started_description">Por favor preencha os campos para que possamos estimar a quantidade de água que você
        deve ingerir, uma vez que isso tenha sido feito, armazenaremos esses dados para consultas ou modificações futuras.</string>

    <string name="text_glass_select">Adicionar água</string>
    <string name="text_glass_200">200 ml de água</string>
    <string name="text_glass_300">300 ml de água</string>
    <string name="text_glass_400">400 ml de água</string>
    <string name="text_glass_500">500 ml de água</string>
    <string name="text_glass_1L">1000 ml de água</string>
    <string name="text_alarm_description">Opa, está hora de tomar aquela água 💙 </string>
    <string name="text_contratulations">Parabéns por ter concluído a meta! 💙 🎉</string>
    <string name="text_contratulations_description">Você está entre os melhores! Você sabia que um estudo realizado entre 2008 e 2014 pela Danone Research, com 16.276 adultos, com idade entre 18 e 70 anos, de 13 países, incluindo o Brasil, mostrou que o hábito de tomar água está aquém do ideal.</string>

    <string name="text_user_add_error">Erro ao inserir nformações de usuário!</string>
    <string name="text_user_added">Informações de usuário cadastradas!</string>
    <string name="channel_name">laagua_channel</string>
    <string name="channel_description">Laagua channel to notify user</string>
    <string name="text_add_water_amount">Adicionar quantidade</string>
    <string name="text_add_water_glass">Salvar copo</string>
    <string name="hint_glass_amount">Digite a quantidade de água</string>
    <string name="toast_error_glass">Por favor insira a quantidade de agua desejada</string>
    <string name="page_title_glass_add">Definir quantidade</string>
    <string name="toast_message_error_water_input">Erro ao adicionar quantidade de água, revise os dados </string>
    <string name="toast_message_error_glass_save">Copo não foi  salvo, por favor tente novamente</string>
</resources>