<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Configurações "
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_header" />

    <ImageView
        android:id="@+id/imageViewBackIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="@+id/container_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDeleteIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@+id/container_header"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="@+id/container_header"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="80"
        android:gravity="center" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputName" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputWeight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_gradient_standard_button"
        android:text="@string/text_save_all"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>