<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GlassList">

        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_glass_select"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container_header"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_header" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Selecione a quantidade"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageViewBackIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="@+id/container_header"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="@+id/container_header"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAdd200"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="70dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_glass_200"
            android:textSize="18dp"
            android:textStyle="bold"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonAdd300"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_glass_300"
            android:textSize="18dp"
            android:textStyle="bold"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd200"
            tools:layout_editor_absoluteX="24dp" />

        <Button
            android:id="@+id/buttonAdd400"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_glass_400"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:textSize="18dp"
            android:textStyle="bold"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd300"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/buttonAdd500"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_glass_500"
            android:textSize="18dp"
            android:textStyle="bold"
            app:icon="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd400"
            tools:layout_editor_absoluteX="20dp" />


        <View
            android:id="@+id/floatingButtonAddGlassOptions"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/floating_button_success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageViewAddGlassIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/floatingButtonAddGlassOptions"
            app:layout_constraintEnd_toEndOf="@+id/floatingButtonAddGlassOptions"
            app:layout_constraintStart_toStartOf="@+id/floatingButtonAddGlassOptions"
            app:layout_constraintTop_toTopOf="@+id/floatingButtonAddGlassOptions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>